--- a/chara_crt/Window2.xaml
+++ b/chara_crt/Window2.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="chara_crt.MainWindow"
+﻿<Window x:Class="chara_crt.Window2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,12 +7,12 @@
         mc:Ignorable="d"
         Title="Character Creator" Height="500" Width="800" Background="White">
     <StackPanel>
-        <Label x:Name="uwu" Content="Charakter Kreativita" HorizontalAlignment="Center" FontSize="45" FontFamily="Comic Sans MS"/>
-        <Button x:Name="btn_crt" Content="tvoř" FontSize="35" FontFamily="Comic Sans MS" Margin="15" Click="btn_crt_Click"/>
         <Button x:Name="btn_load" Content="Load Charactera" FontSize="35" FontFamily="Comic Sans MS" Margin="15" Click="btn_load_Click"/>
         <Grid>
-            <Button x:Name="btn_sv" Content="světlo" Background="White" Foreground="Black" Click="btn_sv_Click" Margin="150,69,414,-162"/>
-            <Button x:Name="btn_tma" Content="tma" Background="Black" Foreground="White" Click="btn_tma_Click" Margin="409,69,150,-162"/>
+            <Border x:Name="border_color" BorderThickness="5" BorderBrush="{StaticResource BorderColor}" VerticalAlignment="Center" HorizontalAlignment="Center" Width="Auto" Height="Auto">
+                <Image x:Name="final_image" Source="" Width="212" Height="300" Stretch="Uniform" />
+            </Border>
         </Grid>
+        <Label x:Name="final_lbl" Content="" HorizontalAlignment="Center" FontSize="45" FontFamily="Comic Sans MS"/>
     </StackPanel>
 </Window>
